--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 #####=== Python ===#####
 
+venv/
+example_project/db.sqlite3
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -54,4 +57,3 @@ docs/_build/
 
 # PyBuilder
 target/
-
